Tests/Runtime2/Error/Types/.build/catchfileerror.pr
[
  {
    "name": "CatchFileError",
    "description": "Sets the %fileErrorCaught% flag to true (the \u0027\u003C= pr: null\u0027 note is ignored by the compiler since it is not an engine action).",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "set %fileErrorCaught% = true",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%fileErrorCaught%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": true,
                "type": "bool"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/CatchFileError.goal",
    "prPath": "/.build/catchfileerror.pr",
    "hash": "41c7c19edbdb6bc6e6f6e20355d6163717a2a518dd94db2ab2c1c062b026d233",
    "builderVersion": "0.3",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]